Make the whole row (whitespace) clickable for all categories and menu options in search sidebar menu and select metadata menu. - In menu.html (line 53,68,95,114), wrap the checkmark, i icon, and menu   text into a span. It will be easier to set the background color for all   them when they are grouped together. - In opus.css (line 706-710), add the styling to make sure the a tags for   categories take up full width in select metadata and search sidebar menu. - In opus.css (line 1511), make sure each menu option takes up full width   in select metadata and search sidebar menu. - In opus.css (line 1562-1565), remove the padding to make sure the full   whitespace is clickable for each menu option. - In menu.js (line 95,102), make sure only the checkmark, i icon, and   menu option text are highlighted/de-highlighted when a menu option is   clicked.

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -703,14 +703,13 @@ button.op-mini-thumbnail-zoom {
     right: 1.25em;
 }
 
-/* Make sure the a tags for categories take up full width in select metadata menu */
-.op-search-menu-category > a {
-    display: flex;
+/* Make sure the a tags for categories take up full width in select metadata
+and search sidebar menu */
+a[href^="#selector-submenu-search"], a[href^="#selector-submenu-obs"], 
+a[href^="#search-submenu-obs"] {
+    display: block;
     margin-top: 0 !important;
     margin-bottom: 0 !important;
-    flex: 0 0 100%;
-    /* Vertically align arrow icon with the category text */
-    align-items: center;
 }
 
 /* Make white space (padding) in metadata selector modal responsive */
@@ -1543,10 +1542,13 @@ panel are properly separated */
 }
 
 .op-search-menu a.op-search-param {
-    margin-top: 5px;
-    margin-bottom: 12px;
+    /* margin-top: 5px;
+    margin-bottom: 12px; */
+    margin-top: 1px;
+    margin-bottom: 2px;
     font-weight: 70;
     color: initial;
+    display: block;
 }
 
 .op-search-menu a.op-search-param:hover {
@@ -1555,6 +1557,11 @@ panel are properly separated */
 
 .op-search-menu .list-group li:nth-child(1) {
     border-top: 0 none;
+}
+
+/* Make sure full width of white space in search sidebar is clickable */
+.op-search-menu .list-group-item {
+    padding-right: 0;
 }
 
 /* Reduce left space in each widget (from 50px to 10px) */
